<resources>
    <string name="app_name">E-Commerce</string>
    <string name="enter_mail">Enter E-mail</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_pass_confirm">Confirm Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_contact">Enter Contact Phone</string>
    <string name="enter_username">Enter Username</string>

    <string name="login">Login</string>
    <string name="login_text">Login now</string>

    <string name="register">Register</string>
    <string name="register_text">Register Now</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="request_pass_reset">Reset Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="action_notifications">Notifications</string>

    <string name="action_cart">Shopping cart</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_products">Products</string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_orders_track">Order Tracking</string>
    <string name="menu_os">List OS</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_logout">Log out</string>

    <string name="android_version">Android</string>
    <string name="api_level">API Level</string>

    <string name="BLOB_URL_BASE">https://temaepeciale.blob.core.windows.net/temaepeciale/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blancc">placeholder text</string>
    <string name="add_quant">+</string>
    <string name="rem_quant">-</string>
    <string name="add_to_cart">Agregar al carrito</string>


</resources>