<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_baseline_search_24"
          android:tint="#FFFFFF"
          android:orderInCategory="1"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_notifications"
          android:title="@string/action_notifications"
          android:icon="@drawable/ic_baseline_notifications_24"
          android:tint="#FFFFFF"
          android:orderInCategory="2"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_cart"
          android:title="@string/action_cart"
          android:icon="@drawable/ic_sharp_shopping_cart_24"
          android:tint="#FFFFFF"
          android:orderInCategory="3"
          app:showAsAction="ifRoom"/>
</menu>
