<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity"
        android:background="@color/colorPrimary"
>

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titleTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.496"/>
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="64dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            android:layout_marginTop="32dp" android:id="@+id/cardView">

        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp" app:srcCompat="@drawable/ic_baseline_person_24"
                android:id="@+id/imageView"
        />
    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/requestPasswordResetButton"
            android:background="@drawable/roundbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="88dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout" app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="|"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pipeTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/register_text"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerTextView"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/pipeTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/forgot_pass"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/forgotPasswordTextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/pipeTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp" android:layout_marginBottom="32dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/nameInputLayout" app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name" android:id="@+id/nameInputEditText"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/usernameInputLayout" app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username" android:id="@+id/usernameInputEditText"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/mailInputLayout" app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail" android:id="@+id/mailInputEditText"
                android:inputType="textWebEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/passInputLayout" app:layout_constraintTop_toBottomOf="@+id/mailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass" android:id="@+id/passInputEditText" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/passConfirmInputLayout" app:layout_constraintTop_toBottomOf="@+id/passInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass_confirm" android:id="@+id/passConfirmInputEditText"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/phoneInputLayout" app:layout_constraintTop_toBottomOf="@+id/passConfirmInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contact" android:id="@+id/phoneInputEditText"
                android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
