<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.LoginActivity">
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titleTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="152dp"
            app:layout_constraintHorizontal_bias="0.494"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintVertical_bias="0.069" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/mailInputLayout" app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail" android:id="@+id/mailInputEditText"
                android:inputType="textWebEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/passInputLayout" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/mailInputLayout" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pass" android:id="@+id/passInputEditText"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginButton"
            android:background="@drawable/roundbutton"
            app:layout_constraintTop_toBottomOf="@+id/passInputLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.138"/>
    <TextView
            android:text="@string/forgot_pass"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/forgotPasswordTextView"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/pipeTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/register_text"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerTextView"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/pipeTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"/>
    <TextView
            android:text="|"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pipeTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>