<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.ForgotPasswordActivity"
        android:background="@color/colorPrimary"
>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titleTextView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.496"/>

    <Button
            android:text="@string/request_pass_reset"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/requestPasswordResetButton"
            android:background="@drawable/roundbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="384dp"
            app:layout_constraintTop_toBottomOf="@+id/mailInputLayout"
            android:textStyle="bold"
            android:includeFontPadding="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    <TextView
            android:text="@string/register_text"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/registerTextView"
            android:textSize="18sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/requestPasswordResetButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="64dp"/>
    <TextView
            android:text="@string/login_text"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginTextView"
            android:textSize="18sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/requestPasswordResetButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="64dp"/>
    <TextView
            android:text="|"
            android:textColor="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pipeTextView"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/requestPasswordResetButton"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@+id/registerTextView"
            app:layout_constraintEnd_toStartOf="@+id/loginTextView" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:id="@+id/mailInputLayout" app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mail" android:id="@+id/mailInputEditText"
                android:inputType="textWebEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>