<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.productos.DetallesProducto">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/hello_blank_fragment" android:id="@+id/Prod_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/detalle_imagen"/>


    <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.274"/>


    <ImageView
            android:layout_width="353dp"
            android:layout_height="279dp" tools:src="@tools:sample/avatars" android:id="@+id/detalle_imagen"
            app:layout_constraintTop_toBottomOf="@+id/Prod_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.103" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="Carrusel"/>
    <TextView
            android:text="@string/hello_blancc"
            android:layout_width="111dp"
            android:layout_height="40dp" android:id="@+id/Precio_objeto"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/detalle_imagen" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:layout_marginEnd="245dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="205dp"
            app:layout_constraintVertical_bias="0.23"/>
    <Button
            android:text="@string/rem_quant"
            android:layout_width="42dp"
            android:layout_height="42dp" android:id="@+id/button"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/Precio_objeto" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="29dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp" app:layout_constraintEnd_toStartOf="@+id/textView2"
            android:layout_marginEnd="7dp"/>
    <Button
            android:text="@string/add_quant"
            android:layout_width="42dp"
            android:layout_height="42dp" android:id="@+id/button2"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/detalle_imagen" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/textView2"/>
    <Button
            android:text="@string/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="42dp" android:id="@+id/button3"
            android:layout_marginEnd="29dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/detalle_imagen" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/button2" android:onClick="Aggregate_img"/>
    <TextView
            android:text="@string/hello_blancc"
            android:layout_width="62dp"
            android:layout_height="42dp" android:id="@+id/textView2"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/Precio_objeto" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>